# eeg_streamlit_dashboard

streamlit_app/: config.py  main.py  pyproject.toml  requirements.txt
streamlit_app/data/: df_all.csv  df_all_mean.csv  df_all_test.csv  df_all_test_mean.csv  model_performance.csv  shap_lgb_mean.csv  shap_lgb_sum.csv
streamlit_app/pages/: feature_comparison.py  model_perf_heatmap.py  shap_values_heatmap.py
